--- a/Veterinaria/Html/index.html
+++ b/Veterinaria/Html/index.html
@@ -22,7 +22,7 @@
       <h1>Veterinaria PJIC</h1>
     </header>
 
-    <nav class="navbar bg-primary" data-bs-theme="dark">
+    <nav>
       <ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Servicios</a></li>
